--- a/src/app/components/cart/cart.html
+++ b/src/app/components/cart/cart.html
@@ -1,3 +1,5 @@
+<!-- Header -->
+<app-header></app-header>
 <div class="cart-container">
     <div class="cart-header">
       <div class="cart-step active">Mi Carrito</div>
@@ -70,4 +72,5 @@
       </div>
     </div>
   </div>
-  
+  <!-- Footer -->
+<app-footer></app-footer>
