--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -26,6 +26,23 @@
     position: absolute;
     top: 30px;
   }
+
+  .header-bg .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5); /* negro 50% transparente */
+    z-index: 1;
+  }
+
+  /* Contenido del header por encima de la capa negra */
+.header-bg nav,
+.header-bg .main-content {
+    position: relative;
+    z-index: 2;
+}
   
   .logo img {
     height: 60px;
@@ -40,6 +57,7 @@
   .nav-items a {
     color: #000;
     text-decoration: none;
+    font-size: 19px;
     font-weight: 500;
     padding: 5px 10px;
     border-radius: 6px;
@@ -58,7 +76,7 @@
   }
   
   .texto01 {
-    font-size: 90px;
+    font-size: 80px;
     text-align: left;
   }
   
@@ -89,6 +107,8 @@
     padding: 10px 20px;
     background-color: #C9A66B;
     color: #fff;
+    font-size: 20px;
+    border-color: #C9A66B;
     text-decoration: none;
     border-radius: 6px;
     display: inline-block;
