--- a/src/app/components/payment/payment.html
+++ b/src/app/components/payment/payment.html
@@ -1,4 +1,5 @@
-
+<!-- Header -->
+<app-header></app-header>
 
 <div class="payment-container">
   <!-- Sección izquierda: Información de pago -->
@@ -100,3 +101,5 @@
     <button class="btn-pagar">Pagar S/.140 →</button>
   </div>
 </div>
+<!-- Footer -->
+<app-footer></app-footer>
