--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -316,7 +316,7 @@
 
         <!-- Contacto -->
         <div class="main-contenido">
-            <div class="contacto">
+            <div class="contacto" id="contacto">
             <h2>Contáctanos</h2>
             <p>Comuníquese con nosotros para cualquier consulta o asistencia; ¡estamos aquí para ayudarlo!</p>
 
